@@ -16,4 +16,5 @@
             - in BuildSchurReducedRHS, multiply ddata instead of divide
 02/20/01    still version 1.5.0R3
             - fix memory leaks with reusing selectedList_
+            - change isis option to hypre in cfei-hypre.h
 
